--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
     "name": "jquery.modal.js",
     "version": "1.2",
 
+    "main": "js/jquery.modal.min.js",
+
     "ignore": [
         "**/.*",
         "bower_components",
