--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,6 @@
   "description": "A simple jquery Modal boxes",
   "license": "MIT",
   "dependencies": {
-    "jquery": ">= 1.7.2",
+    "jquery": ">= 1.7.2"
   }
 }
